--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="CarRent" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <DockPanel LastChildFill="False" Background="#FF823A3A">
-        <DockPanel LastChildFill="False" Background="#FFA7C2C3" Width="199">
+        <DockPanel LastChildFill="False" Background="#FFA7C2C3" Width="200">
             <Button Content="Button" DockPanel.Dock="Top" Height="50" BorderBrush="{x:Null}"/>
+            <Button Content="Button" DockPanel.Dock="Top" BorderBrush="{x:Null}" Height="50"/>
         </DockPanel>
     </DockPanel>
 </Window>
