--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
@@ -1,12 +1,59 @@
-﻿<Window x:Class="VehicleRentalSystem_V1._0.MainWindow"
+﻿<Window x:Name="MainWindow1" x:Class="VehicleRentalSystem_V1._0.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Vehicle Rental System V1.0" Height="450" Width="800" Icon="/Icon.png">
+
+    <Window.Resources>
+        <Style x:Key="CategoryButton" TargetType="Button">
+            <!-- Set background property here -->
+            <Setter Property="Background" Value="#FF7AB3EF" />
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                      VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#FF368CE7"/>
+                </Trigger>
+                <Trigger Property="IsFocused" Value="True">
+                    <Setter Property="Background" Value="#FF368CE7"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="109*"/>
+            <RowDefinition Height="108*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="91*"/>
+            <ColumnDefinition Width="309*"/>
+        </Grid.ColumnDefinitions>
+        <DockPanel x:Name="CategoryPanel" LastChildFill="False" Width="180" Background="#FFDEECFB" HorizontalAlignment="Left" Grid.RowSpan="2" Margin="1,0,0,0">
+            <Button x:Name="BookingsBtn" Content="&#x9;BOOKINGS&#x9;&gt;" Style="{StaticResource CategoryButton}"  DockPanel.Dock="Top" Height="50" Click="Button_Click" Padding="1,1,1,1" FontFamily="Century Gothic" BorderThickness="0,0,0,0" Margin="0,2,0,2" FontWeight="ExtraBold" />
+            <Button x:Name="DetailsBtn" Content="&#x9;DETAILS&#x9;&#x9;&gt;"  Style="{StaticResource CategoryButton}" DockPanel.Dock="Top" Click="Button_Click"  Padding="1,1,1,1" FontFamily="Century Gothic" BorderThickness="0,0,0,0" Height="50" Margin="0,0,0,2" FontWeight="ExtraBold"/>
+            <Button x:Name="VehicleBtn" Content="&#x9;VEHICLES&#x9;&gt;"  Style="{StaticResource CategoryButton}" DockPanel.Dock="Top" Click="Button_Click" Padding="1,1,1,1" FontFamily="Century Gothic" BorderThickness="0,0,0,0" Height="50" Margin="0,0,0,2" FontWeight="ExtraBold"/>
+            <Button x:Name="DriverBtn" Content="&#x9;DRIVERS&#x9;&#x9;&gt;"  Style="{StaticResource CategoryButton}" DockPanel.Dock="Top" Click="Button_Click"  Padding="1,1,1,1" FontFamily="Century Gothic" BorderThickness="0,0,0,0" Height="50" Margin="0,0,0,2" FontWeight="ExtraBold"/>
+            <Button x:Name="AdminBtn" Content="&#x9;ADMIN&#x9;&#x9;&gt;"  Style="{StaticResource CategoryButton}" DockPanel.Dock="Top" Click="Button_Click" Padding="1,1,1,1" FontFamily="Century Gothic" BorderThickness="0,0,0,0" Height="50" FontWeight="ExtraBold"/>
+        </DockPanel>
+        <DockPanel x:Name="OptionPanel" LastChildFill="False" RenderTransformOrigin="0.5,0.5" Width="619" Grid.RowSpan="2" Grid.ColumnSpan="2" Margin="181,0,0,0">
+            <DockPanel.Background>
+                <ImageBrush ImageSource="/Background.png" Stretch="Uniform"/>
+            </DockPanel.Background>
+            <local:BookingsUC x:Name="BookingsUC" Width="619" Height="431"/>
+        </DockPanel>
+
     </Grid>
 </Window>
