--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
@@ -33,27 +33,36 @@
         </Style>
     </Window.Resources>
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="/Background.png" Stretch="Uniform"/>
+        </Grid.Background>
         <Grid.RowDefinitions>
-            <RowDefinition Height="109*"/>
-            <RowDefinition Height="108*"/>
+            <RowDefinition Height="107*"/>
+            <RowDefinition Height="110*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="91*"/>
             <ColumnDefinition Width="309*"/>
         </Grid.ColumnDefinitions>
-        <DockPanel x:Name="CategoryPanel" LastChildFill="False" Width="180" Background="#FFDEECFB" HorizontalAlignment="Left" Grid.RowSpan="2" Margin="1,0,0,0">
+        <DockPanel x:Name="CategoryPanel" LastChildFill="False" Width="180" Background="#FFDEECFB" HorizontalAlignment="Center" Grid.RowSpan="2">
             <Button x:Name="BookingsBtn" Content="&#x9;BOOKINGS&#x9;&gt;" Style="{StaticResource CategoryButton}"  DockPanel.Dock="Top" Height="50" Click="Button_Click" Padding="1,1,1,1" FontFamily="Century Gothic" BorderThickness="0,0,0,0" Margin="0,2,0,2" FontWeight="ExtraBold" />
             <Button x:Name="DetailsBtn" Content="&#x9;DETAILS&#x9;&#x9;&gt;"  Style="{StaticResource CategoryButton}" DockPanel.Dock="Top" Click="Button_Click"  Padding="1,1,1,1" FontFamily="Century Gothic" BorderThickness="0,0,0,0" Height="50" Margin="0,0,0,2" FontWeight="ExtraBold"/>
             <Button x:Name="VehicleBtn" Content="&#x9;VEHICLES&#x9;&gt;"  Style="{StaticResource CategoryButton}" DockPanel.Dock="Top" Click="Button_Click" Padding="1,1,1,1" FontFamily="Century Gothic" BorderThickness="0,0,0,0" Height="50" Margin="0,0,0,2" FontWeight="ExtraBold"/>
             <Button x:Name="DriverBtn" Content="&#x9;DRIVERS&#x9;&#x9;&gt;"  Style="{StaticResource CategoryButton}" DockPanel.Dock="Top" Click="Button_Click"  Padding="1,1,1,1" FontFamily="Century Gothic" BorderThickness="0,0,0,0" Height="50" Margin="0,0,0,2" FontWeight="ExtraBold"/>
             <Button x:Name="AdminBtn" Content="&#x9;ADMIN&#x9;&#x9;&gt;"  Style="{StaticResource CategoryButton}" DockPanel.Dock="Top" Click="Button_Click" Padding="1,1,1,1" FontFamily="Century Gothic" BorderThickness="0,0,0,0" Height="50" FontWeight="ExtraBold"/>
         </DockPanel>
-        <DockPanel x:Name="OptionPanel" LastChildFill="False" RenderTransformOrigin="0.5,0.5" Width="619" Grid.RowSpan="2" Grid.ColumnSpan="2" Margin="181,0,0,0">
-            <DockPanel.Background>
-                <ImageBrush ImageSource="/Background.png" Stretch="Uniform"/>
-            </DockPanel.Background>
-            <local:BookingsUC x:Name="BookingsUC" Width="619" Height="431"/>
-        </DockPanel>
-
+        <local:BookingsUC x:Name="BookingUC" Grid.ColumnSpan="2" Grid.RowSpan="2" Margin="181,0,0,0" Visibility="Hidden"/>
+        <local:VehicleUC x:Name="VehicleUC" RenderTransformOrigin="0.5,0.5" Grid.Column="1" Margin="1,0,0,0" Grid.RowSpan="2" Visibility="Hidden">
+            <local:VehicleUC.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </local:VehicleUC.RenderTransform>
+        </local:VehicleUC>
+        <local:DriversUC x:Name="DriversUC" HorizontalAlignment="Center" Height="434" Grid.RowSpan="2" VerticalAlignment="Top" Width="619" Grid.Column="1" Visibility="Hidden"/>
+        <local:AdminUC x:Name="AdminUC" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Height="434" Grid.RowSpan="2" Width="619" Visibility="Hidden"/>
     </Grid>
 </Window>
