--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="Vehicle Rental System V1.0" Height="450" Width="800" Icon="/Icon.png">
+        Title="Vehicle Rental System V1.0" Height="450" Width="800" Icon="/Icon.png" WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
         <Style x:Key="CategoryButton" TargetType="Button">
@@ -44,7 +44,7 @@
             <ColumnDefinition Width="91*"/>
             <ColumnDefinition Width="309*"/>
         </Grid.ColumnDefinitions>
-        <DockPanel x:Name="CategoryPanel" LastChildFill="False" Width="180" Background="#FFDEECFB" HorizontalAlignment="Center" Grid.RowSpan="2">
+        <DockPanel x:Name="CategoryPanel" LastChildFill="False" Width="180" Background="#FFDEECFB" Grid.RowSpan="2" HorizontalAlignment="Left">
             <Button x:Name="BookingsBtn" Content="&#x9;BOOKINGS&#x9;&gt;" Style="{StaticResource CategoryButton}"  DockPanel.Dock="Top" Height="50" Click="Button_Click" Padding="1,1,1,1" FontFamily="Century Gothic" BorderThickness="0,0,0,0" Margin="0,2,0,2" FontWeight="ExtraBold" />
             <Button x:Name="DetailsBtn" Content="&#x9;DETAILS&#x9;&#x9;&gt;"  Style="{StaticResource CategoryButton}" DockPanel.Dock="Top" Click="Button_Click"  Padding="1,1,1,1" FontFamily="Century Gothic" BorderThickness="0,0,0,0" Height="50" Margin="0,0,0,2" FontWeight="ExtraBold"/>
             <Button x:Name="VehicleBtn" Content="&#x9;VEHICLES&#x9;&gt;"  Style="{StaticResource CategoryButton}" DockPanel.Dock="Top" Click="Button_Click" Padding="1,1,1,1" FontFamily="Century Gothic" BorderThickness="0,0,0,0" Height="50" Margin="0,0,0,2" FontWeight="ExtraBold"/>
@@ -64,5 +64,9 @@
         </local:VehicleUC>
         <local:DriversUC x:Name="DriversUC" HorizontalAlignment="Center" Height="434" Grid.RowSpan="2" VerticalAlignment="Top" Width="619" Grid.Column="1" Visibility="Hidden"/>
         <local:AdminUC x:Name="AdminUC" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Height="434" Grid.RowSpan="2" Width="619" Visibility="Hidden"/>
+        <local:DetailsUC x:Name="DetailsUC___Search" VerticalAlignment="Top" Grid.RowSpan="2" Height="434" RenderTransformOrigin="0.504,0.495" Margin="172,-34,10,0" Grid.ColumnSpan="2" HorizontalAlignment="Right"/>
+        <local:DetailsDataCus x:Name="DetailsDataCus" Width="4000" Grid.RowSpan="2" HorizontalAlignment="Left" Margin="180,70,0,0" VerticalAlignment="Top" Height="4000" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.ColumnSpan="2" Visibility="Hidden"/>
+        <local:DetailsDataR x:Name="DetailsDataR" HorizontalAlignment="Left" Height="4000" Margin="180,70,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="4000" Grid.ColumnSpan="2" ScrollViewer.HorizontalScrollBarVisibility="Auto" Visibility="Hidden"/>
+        <local:DetailsDataV x:Name="DetailsDataV" HorizontalAlignment="Left" Margin="180,70,0,0" VerticalAlignment="Top" Height="4000" Grid.RowSpan="2" Width="4000" Grid.ColumnSpan="2" ScrollViewer.HorizontalScrollBarVisibility="Auto" Visibility="Hidden"/>
     </Grid>
 </Window>
