--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
@@ -64,7 +64,7 @@
         </local:VehicleUC>
         <local:DriversUC x:Name="DriversUC" HorizontalAlignment="Center" Height="434" Grid.RowSpan="2" VerticalAlignment="Top" Width="619" Grid.Column="1" Visibility="Hidden"/>
         <local:AdminUC x:Name="AdminUC" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Height="434" Grid.RowSpan="2" Width="619" Visibility="Hidden"/>
-        <local:DetailsUC x:Name="DetailsUC___Search" VerticalAlignment="Top" Grid.RowSpan="2" Height="434" RenderTransformOrigin="0.504,0.495" Margin="172,-34,10,0" Grid.ColumnSpan="2" HorizontalAlignment="Right"/>
+        <local:DetailsUC x:Name="DetailsUC___Search" VerticalAlignment="Top" Grid.RowSpan="2" Height="434" RenderTransformOrigin="0.504,0.495" Margin="172,-34,10,0" Grid.ColumnSpan="2" HorizontalAlignment="Right" Visibility="Hidden"/>
         <local:DetailsDataCus x:Name="DetailsDataCus" Width="4000" Grid.RowSpan="2" HorizontalAlignment="Left" Margin="180,70,0,0" VerticalAlignment="Top" Height="4000" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.ColumnSpan="2" Visibility="Hidden"/>
         <local:DetailsDataR x:Name="DetailsDataR" HorizontalAlignment="Left" Height="4000" Margin="180,70,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="4000" Grid.ColumnSpan="2" ScrollViewer.HorizontalScrollBarVisibility="Auto" Visibility="Hidden"/>
         <local:DetailsDataV x:Name="DetailsDataV" HorizontalAlignment="Left" Margin="180,70,0,0" VerticalAlignment="Top" Height="4000" Grid.RowSpan="2" Width="4000" Grid.ColumnSpan="2" ScrollViewer.HorizontalScrollBarVisibility="Auto" Visibility="Hidden"/>
