--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/AdminUC.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/AdminUC.xaml
@@ -6,8 +6,26 @@
              xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style  TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="bg" Background="{TemplateBinding Background}" BorderThickness="2" BorderBrush="#FF1572A1">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FF7AB3EF" TargetName="bg" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
     <Grid>
-        <Button x:Name="EmployeeMBtn" Content="MANAGE EMPLOYEES" HorizontalAlignment="Center" Height="50" Margin="0,60,0,0" VerticalAlignment="Top" Width="250" Background="#FF1572A1" FontFamily="Century Gothic" Foreground="White" BorderBrush="#FF7AB3EF" RenderTransformOrigin="1,1" BorderThickness="2,2,2,2" FontSize="14" Click="VehicleInUseBtn_Click">
+        <Button x:Name="EmployeeMBtn" Content="MANAGE EMPLOYEES" HorizontalAlignment="Center" Height="50" Margin="0,60,0,0" VerticalAlignment="Top" Width="250" Background="#FF1572A1" FontFamily="Century Gothic" Foreground="White" BorderBrush="#FF7AB3EF" RenderTransformOrigin="1,1" BorderThickness="2,2,2,2" FontSize="14" Click="VehicleInUseBtn_Click" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="5"/>
