--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ForgotPassword.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ForgotPassword.xaml
@@ -40,16 +40,17 @@
                     Margin="0,10,0,0"
                     >
                 <TextBox x:Name="txtUser"
-                             FontSize="7"
+                              FontSize="15"
                              FontWeight="Medium"
                              FontFamily="Montserrat"
-                             Foreground="White"
-                             CaretBrush="LightGray"
-                             BorderBrush="DarkGray"
+                             TextAlignment="Center"
+                             Foreground="Black"
+                              CaretBrush="Gray"
+                             BorderBrush="White"
                              BorderThickness="0,0,0,1"
-                             Margin="0,5,0,0"
-                             Height="18"
-                             Padding="30,0,0,0" TextChanged="txtUser_TextChanged">
+                             Margin="8,8,8,8"
+                          
+                             Padding="30,0,0,0">
                     <TextBox.Background>
                         <ImageBrush ImageSource="/Icons/forgot-password.png"
 
