--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ForgotPassword.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ForgotPassword.xaml
@@ -82,7 +82,7 @@
                             Cursor="Hand"
                             Grid.Column="2"
                             Margin="0,20,0,0"
-                            Click="btnLogin_Click" Height="44" Width="249">
+                            Click="btnRequest_Click" Height="44" Width="249">
                 <Button.Style>
                     <Style TargetType="Button">
                         <Setter Property="Background" Value="#71A4E1"/>
