--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/Login.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/Login.xaml
@@ -106,7 +106,7 @@
 
 
 
-            <Button x:Name="btnLogin"
+            <Button x:Name="btnSubmit"
                              
                             BorderThickness="0"
                             Content="Login"
