--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleHireForm.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleHireForm.xaml
@@ -1,14 +1,13 @@
-﻿<Window x:Class="VehicleRentalSystem_V1._0.RentalForms"
+﻿<Window x:Class="VehicleRentalSystem_V1._0.VehicleHireForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="RentalForms" Height="550" Width="900"  WindowStartupLocation="CenterScreen">
-
+        Title="VehicleHireForm" Height="550" Width="900"  WindowStartupLocation="CenterScreen">
     <ScrollViewer>
-        <Border  CornerRadius="15"  BorderBrush="#71A4E1" BorderThickness="3" Height="1250" Grid.Row="1" Width="700" Margin="0,57,0,0">
+        <Border  CornerRadius="15"  BorderBrush="#71A4E1" BorderThickness="3" Height="1450" Grid.Row="1" Width="700" Margin="0,57,0,0">
             <StackPanel Width="500"
                     Grid.Row="2"
                     Orientation="Vertical"
@@ -17,7 +16,7 @@
                 <Image Source="C:\Users\lenovo\Documents\GitHub\CSharp-GroupProject\VehicleRentalSystem V1.0\VehicleRentalSystem V1.0\Icon.png"
                    Width="90" Height="74"/>
 
-                <TextBlock Text="Vehicle Rent Form"
+                <TextBlock Text="Vehicle Hire Form"
                        TextAlignment="Center"
                        FontSize="15"
                        Foreground="#71A4E1"
@@ -343,18 +342,87 @@
 
                 </Border>
 
+                <!--Next-->
 
-                <Button x:Name="btnSubmit"
+                <TextBlock Text="Rider Name"
+                               FontSize="10"
+                               Foreground="Black"
+                               FontWeight="ExtraBold"
+                               FontFamily="Century Gothic"
+                               Margin="0,30,0,0" Width="246"/>
+
+                <Border CornerRadius="15"  
+                    BorderBrush="Black" 
+                    BorderThickness="2" 
+                    HorizontalAlignment="Center" 
+                    Height="41" Grid.Row="1" 
+                    Width="250"
+                    Margin="0,10,0,0"
+                    >
+                    <TextBox x:Name="txtR_Name"
+                             FontSize="15"
+                             FontWeight="Medium"
+                             FontFamily="Montserrat"
+                             TextAlignment="Center"
+                             Foreground="Black"
+                              CaretBrush="Gray"
+                             BorderBrush="White"
+                             BorderThickness="0,0,0,1"
+                             Margin="8,8,8,8"
+                             />
+
+
+
+
+                </Border>
+
+                <!--Next-->
+
+                <TextBlock Text="Riderr NIC"
+                               FontSize="10"
+                               Foreground="Black"
+                               FontWeight="ExtraBold"
+                               FontFamily="Century Gothic"
+                               Margin="0,30,0,0" Width="246"/>
+
+                <Border CornerRadius="15"  
+                    BorderBrush="Black" 
+                    BorderThickness="2" 
+                    HorizontalAlignment="Center" 
+                    Height="41" Grid.Row="1" 
+                    Width="250"
+                    Margin="0,10,0,0"
+                    >
+                    <TextBox x:Name="txtR_NIC"
+                             FontSize="15"
+                             FontWeight="Medium"
+                             FontFamily="Montserrat"
+                             TextAlignment="Center"
+                             Foreground="Black"
+                              CaretBrush="Gray"
+                             BorderBrush="White"
+                             BorderThickness="0,0,0,1"
+                             Margin="8,8,8,8"
+                             />
+                    
+                    
+
+
+
+
+                </Border>
+
+                <Button x:Name="btnSubmitVH"
                              
                             BorderThickness="0"
-                            Content="Request"
-                            Foreground="Black"
+                            Content="Submit"
+                            Foreground="White"
                             FontSize="12"
                             FontFamily="MonteSerrat"
                             Cursor="Hand"
-                            Grid.Column="1"
+                            Grid.Column="2"
                             Margin="0,20,0,0"
-                            Click="btnSubmit_Click" Height="44" Width="249">
+                            Click="btnSubmitVH_Click" Height="44" Width="249">
                     <Button.Style>
                         <Style TargetType="Button">
                             <Setter Property="Background" Value="#71A4E1"/>
@@ -377,7 +445,11 @@
                         </ControlTemplate>
                     </Button.Template>
                 </Button>
-                <Button x:Name="btnClear"
+
+
+
+
+                <Button x:Name="btnClearVH"
                              
                             BorderThickness="0"
                             Content="Clear"
@@ -387,7 +459,7 @@
                             Cursor="Hand"
                             Grid.Column="2"
                             Margin="0,20,0,0"
-                            Click="btnClear_Click" Height="44" Width="249">
+                            Click="btnClearVH_Click" Height="44" Width="249">
                     <Button.Style>
                         <Style TargetType="Button">
                             <Setter Property="Background" Value="Red"/>
@@ -410,7 +482,6 @@
                         </ControlTemplate>
                     </Button.Template>
                 </Button>
-
 
             </StackPanel>
 
