--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ManageDriverForm.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ManageDriverForm.xaml
@@ -299,7 +299,7 @@
                                 <Setter Property="Background" Value="#71A4E1"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="#71A4E1"/>
+                                        <Setter Property="Background" Value="#FF023879"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
@@ -330,7 +330,7 @@
                                 <Setter Property="Background" Value="#71A4E1"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="#71A4E1"/>
+                                        <Setter Property="Background" Value="#FF023879"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
