--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ManageDriverForm.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ManageDriverForm.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="VehicleRentalSystem_V1._0.ManageDriverForm"
+﻿<Window x:Name="ManageDriverForm1" x:Class="VehicleRentalSystem_V1._0.ManageDriverForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
