--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/AdminUC.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/AdminUC.xaml
@@ -32,7 +32,7 @@
                 </Style>
             </Button.Resources>
         </Button>
-        <Button x:Name="SettingsBtn" Content="SETTINGS" HorizontalAlignment="Center" Height="50" VerticalAlignment="Top" Width="250" Background="#FF1572A1" FontFamily="Century Gothic" Foreground="White" BorderBrush="#FF7AB3EF" RenderTransformOrigin="1,1" BorderThickness="2,2,2,2" Margin="0,140,0,0" FontSize="14" Click="VehicleAvBtn_Click">
+        <Button x:Name="SettingsBtn" Content="MANAGE RENT PACKAGES" HorizontalAlignment="Center" Height="50" VerticalAlignment="Top" Width="250" Background="#FF1572A1" FontFamily="Century Gothic" Foreground="White" BorderBrush="#FF7AB3EF" RenderTransformOrigin="1,1" BorderThickness="2,2,2,2" Margin="0,140,0,0" FontSize="14" Click="VehicleAvBtn_Click">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="5"/>
