--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
@@ -66,6 +66,6 @@
         <local:DriversUC x:Name="DriversUC" Grid.RowSpan="2" Margin="180,0,0,0" Grid.ColumnSpan="2" Visibility="Hidden"/>
         <local:AdminUC x:Name="AdminUC" Grid.RowSpan="2" Margin="180,0,0,0" Grid.ColumnSpan="2" Visibility="Hidden"/>
         <local:DetailsUC x:Name="DetailsUC___Search" VerticalAlignment="Top" Grid.RowSpan="2" Height="434" RenderTransformOrigin="0.504,0.495" Margin="172,-34,10,0" Grid.ColumnSpan="2" HorizontalAlignment="Right" Visibility="Hidden"/>
-        <local:DetailsDataCus x:Name="DetailsDataGrid" Width="4000" Grid.RowSpan="2" HorizontalAlignment="Left" Margin="205,70,0,0" VerticalAlignment="Top" Height="4000" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.ColumnSpan="2" Visibility="Hidden"/>
+        <local:DetailsDataCus x:Name="DetailsDataGrid" Width="4000" Grid.RowSpan="2" HorizontalAlignment="Left" Margin="205,70,0,0" VerticalAlignment="Top" Height="4000" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.ColumnSpan="2" Loaded="DetailsDataGrid_Loaded" Visibility="Hidden"/>
     </Grid>
 </Window>
