--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/DetailsDataGrid.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/DetailsDataGrid.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <DataGrid x:Name="DataGridView" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+        <DataGrid x:Name="DataGridView" d:ItemsSource="{d:SampleData ItemCount=5}" SelectionChanged="DataGridView_SelectionChanged"/>
     </Grid>
 </UserControl>
